{
  "version": 4,
  "terraform_version": "1.1.5",
  "serial": 135,
  "lineage": "594cc67d-3f14-a400-945e-060797a83da6",
  "resources": [
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "selected1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:111836646603:subnet/subnet-082425b90b6b11ea6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "available_ip_address_count": 4088,
            "cidr_block": "172.31.0.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-082425b90b6b11ea6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "111836646603",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "Public1"
            },
            "vpc_id": "vpc-04c916d27af849168"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "selected2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:111836646603:subnet/subnet-0d7553ba4c4ea74f0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "available_ip_address_count": 4090,
            "cidr_block": "172.31.80.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d7553ba4c4ea74f0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "111836646603",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "Public2"
            },
            "vpc_id": "vpc-04c916d27af849168"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "selected",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:111836646603:vpc/vpc-04c916d27af849168",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-024d3f532769ec675",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-02e3be78",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "my_vpc"
                ]
              }
            ],
            "id": "vpc-04c916d27af849168",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-041ea3cd4c7e0ceef",
            "owner_id": "111836646603",
            "tags": {
              "Name": "my_vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:111836646603:listener/app/ecsalb/efb2879cefbd9d5a/0a79ba78dc6f981c",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:111836646603:listener/app/ecsalb/efb2879cefbd9d5a/0a79ba78dc6f981c",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:111836646603:loadbalancer/app/ecsalb/efb2879cefbd9d5a",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.main",
            "data.aws_availability_zones.available",
            "data.aws_security_groups.single",
            "data.aws_subnet.selected1",
            "data.aws_subnet.selected2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:111836646603:listener/app/ecsalb/efb2879cefbd9d5a/c6b1db97a4d2b918",
            "certificate_arn": "arn:aws:acm:us-east-1:111836646603:certificate/ce8a3352-aee1-4cef-b842-04e54d775eed",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:111836646603:targetgroup/ecsalb/92e9b3e12dec25a8",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:111836646603:listener/app/ecsalb/efb2879cefbd9d5a/c6b1db97a4d2b918",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:111836646603:loadbalancer/app/ecsalb/efb2879cefbd9d5a",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb_target_group.main",
            "aws_lb.main",
            "data.aws_availability_zones.available",
            "data.aws_security_groups.single",
            "data.aws_subnet.selected1",
            "data.aws_subnet.selected2",
            "data.aws_vpc.selected"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:111836646603:targetgroup/ecsalb/92e9b3e12dec25a8",
            "arn_suffix": "targetgroup/ecsalb/92e9b3e12dec25a8",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:111836646603:targetgroup/ecsalb/92e9b3e12dec25a8",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "ecsalb",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-04c916d27af849168"
          },
          "dependencies": [
            "data.aws_vpc.selected"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:111836646603:loadbalancer/app/ecsalb/efb2879cefbd9d5a",
            "arn_suffix": "app/ecsalb/efb2879cefbd9d5a",
            "desync_mitigation_mode": "defensive",
            "dns_name": "ecsalb-67638779.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:111836646603:loadbalancer/app/ecsalb/efb2879cefbd9d5a",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ecsalb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-04b24b9d9d1c34afc"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-082425b90b6b11ea6"
              },
              {
                "subnet_id": "subnet-0d7553ba4c4ea74f0"
              }
            ],
            "subnets": [
              "subnet-082425b90b6b11ea6",
              "subnet-0d7553ba4c4ea74f0"
            ],
            "vpc_id": "vpc-04c916d27af849168",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_security_groups.single",
            "data.aws_subnet.selected1",
            "data.aws_subnet.selected2"
          ]
        }
      ]
    }
  ]
}